layout/base/nsCaret.cpp
@@ -127,8 +127,9 @@ IsKeyboardRTL()
 
 nsCaret::nsCaret()
 : mOverrideOffset(0)
-, mIsBlinkOn(false)
 , mBlinkCount(-1)
+, mHideCount(0)
+, mIsBlinkOn(false)
 , mVisible(false)
 , mReadOnly(false)
 , mShowDuringSelection(false)
@@ -266,7 +267,7 @@ void nsCaret::SetVisible(bool inMakeVisible)
 
 bool nsCaret::IsVisible()
 {
-  if (!mVisible) {
+  if (!mVisible || mHideCount) {
     return false;
   }
 
@@ -301,6 +302,25 @@ bool nsCaret::IsVisible()
   }
 
   return true;
+}
+
+void nsCaret::AddForceHide()
+{
+  MOZ_ASSERT(mHideCount < UINT32_MAX);
+  if (++mHideCount > 1) {
+    return;
+  }
+  ResetBlinking();
+  SchedulePaint();
+}
+
+void nsCaret::RemoveForceHide()
+{
+  if (!mHideCount || --mHideCount) {
+    return;
+  }
+  ResetBlinking();
+  SchedulePaint();
 }
 
 void nsCaret::SetCaretReadOnly(bool inMakeReadonly)
@@ -622,7 +642,7 @@ void nsCaret::ResetBlinking()
 {
   mIsBlinkOn = true;
 
-  if (mReadOnly || !mVisible) {
+  if (mReadOnly || !mVisible || mHideCount) {
     StopBlinking();
     return;
   }
